--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Heart Code</h1>
+    <details>
+        <summary>Hello Buddy</summary>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea odio mollitia ad dolor optio necessitatibus? Incidunt
+            quae nam molestias sunt saepe pariatur animi a placeat. Autem nostrum in error soluta.</p>
+    </details>
 </body>
 </html>
